# FreeRDP

./: CMakeLists.txt
DevolutionsRdp/: .gitignore  CMakeLists.txt  DevolutionsRdp.c  DevolutionsRdp.h  DevolutionsRdp.rc  clipboard.c  clipboard.h  cursor.c  cursor.h  headless.c  headless.h  virtualchannel.c  virtualchannel.h
DevolutionsRdp/cmake/: ConanHelper.cmake  MSVCRuntime.cmake  WindowsRC.cmake  conan.cmake
DevolutionsRdp/patches/: 0000002.patch  0000005.patch  0000007.patch  0000008.patch  0000011.patch  0000013.patch  0000014.patch  0000015.patch  0000016.patch  0000023.patch  0000024.patch  0000026.patch  0000027.patch  0000028.patch  0000029.patch  0000030.patch  0000032.patch  0000033.patch  0000039.patch  0000040.patch  0000042.patch  android-arm64-neon.patch  strnlen_int_max_fix.patch  wsaeventselect_leak_fix.patch
channels/drdynvc/client/: dvcman.c
channels/rdpdr/client/: rdpdr_main.c
channels/rdpdr/server/: rdpdr_main.c
channels/rdpsnd/server/: rdpsnd_main.c
ci/: Jenkinsfile
client/: .gitignore  CMakeLists.txt
client/Android/FreeRDPCore/jni/: android_freerdp.c  android_freerdp.h
client/Android/FreeRDPCore/src/com/freerdp/freerdpcore/services/: LibFreeRDP.java
client/CSharp/: CMakeLists.txt  cursor.c  devolutionsrdp.c  devolutionsrdp.h  headless.c
client/Mac/: CMakeLists.txt  Clipboard.m  FreeRDS.h  Keyboard.m  MRDPCenteringClipView.h  MRDPCenteringClipView.m  MRDPClient.h  MRDPClient.m  MRDPClientDelegate.h  MRDPClientNotifications.h  MRDPScrollView.h  MRDPScrollView.m  MRDPView.h  MRDPView.m  MRDPViewController.h  MRDPViewController.m  MRDPViewControllerDelegate.h  MRDPViewDelegate.h  MRDPViewPasswordPromptDelegate.h  ServerCertificate.h  ServerCertificate.m  ServerCredential.h  ServerCredential.m  ServerDrive.h  ServerDrive.m  X509Certificate.h  X509Certificate.m  mf_client.m  mfreerdp.h
client/Mac/cli/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  FixedScrollView.h  FixedScrollView.m  MainMenu.xib
client/Mac/headless/: AppDelegate.h  AppDelegate.m  CMakeLists.txt  MRDPIPCClient.h  MRDPIPCClient.m  MRDPIPCServer.h  main.m
client/Sample/: freerdp.c
client/Windows/: wf_client.c
client/X11/: xf_client.c  xf_gdi.c  xf_tsmf.c  xf_window.c
client/common/: cmdline.c
cmake/: ConfigOptions.cmake  FindOpenSLES.cmake  MacOSXBundleInfo.plist.in
dotnet/: DevolutionsRdp.c  DevolutionsRdp.h  headless.c
include/freerdp/: dvc.h  settings.h
include/freerdp/crypto/: ssl.h
libfreerdp/: CMakeLists.txt
libfreerdp/codec/: h264_mf.c
libfreerdp/common/: assistance.c  settings.c
libfreerdp/core/: capabilities.c  connection.c  nla.c  peer.c  rdp.c  settings.c  tcp.c  transport.c  update.c
libfreerdp/core/gateway/: rpc_client.c
libfreerdp/crypto/: certificate.c  ssl.c  tls.c
libfreerdp/gdi/: gdi.c
libfreerdp/utils/: passphrase.c  ringbuffer.c  signal.c
patches/: 0000001.patch  0000003.patch  0000004.patch  0000006.patch  0000009.patch  0000010.patch  0000012.patch  0000017.patch  0000018.patch  0000019.patch  0000020.patch  0000021.patch  0000022.patch  0000025.patch  0000031.patch  0000033.patch  0000034.patch  0000035.patch  0000036.patch  0000037.patch  0000038.patch  0000039.patch  0000040.patch  0000043.patch
scripts/: OpenSSL-DownloadAndBuild.command  OpenSSL-DownloadAndBuildMac.command  OpenSSL-DownloadAndBuildMac_32bit.command  setupMacBuild.sh
server/Sample/: sfreerdp.c
server/shadow/: shadow_client.c
winpr/: CMakeLists.txt
winpr/include/: CMakeLists.txt
winpr/include/winpr/: environment.h  file.h  interlocked.h  path.h  winpr.h  winsock.h
winpr/libwinpr/: CMakeLists.txt
winpr/libwinpr/clipboard/: clipboard.c
winpr/libwinpr/environment/: environment.c
winpr/libwinpr/file/: file.c
winpr/libwinpr/input/: keycode.c
winpr/libwinpr/path/: shell.c
winpr/libwinpr/sspi/: sspi.c
winpr/libwinpr/sspi/NTLM/: ntlm.c
winpr/libwinpr/sspi/Schannel/: schannel_openssl.c
winpr/libwinpr/sspi/test/: TestNTLM.c
winpr/libwinpr/synch/: event.c
winpr/libwinpr/thread/: thread.c
winpr/libwinpr/thread/test/: CMakeLists.txt
winpr/libwinpr/utils/: CMakeLists.txt  debug.c  image.c  ini.c
winpr/libwinpr/utils/test/: TestImage.c
winpr/libwinpr/utils/wlog/: BinaryAppender.c  DataMessage.c  FileAppender.c  Message.c  PacketMessage.c  wlog.c  wlog.h
